style.css
/* ... */
/*--------------------------------------------------------------
Content
--------------------------------------------------------------*/

.about-us {
    background: rgba(45, 45, 45, 0.95) none repeat scroll 0% 0% !important;
    padding-bottom: 0px;
}

.focus-box .service-icon {
    width: 250px;
    height: 250px;
    border-radius: 0;
}

.testimonial {
    background: rgba(255, 221, 0, 0.7) none repeat scroll 0% 0% !important;
}

.contact-us {
    background: rgba(80, 80, 80, 0.9) none repeat scroll 0% 0%;
}

.team-member .profile-pic {
    border-radius: 0;
    width: 255px;
    height: 255px;
}

.team-member h5:before {
    background: #FD0 !important;
}

.team-member:hover .details {
    top: 0px;
    background: #FD0 none repeat scroll 0% 0% !important;
    color: #000;
    opacity: 0.8;
    min-height: 255px;
    text-align: center;
}

.team-member .social-icons ul li a {
    color: #404040;
}
.team-member .social-icons ul li a:hover {
    color: #FD0;
}

input[type="text"], input[type="email"], input[type="url"], input[type="password"], input[type="search"], textarea {
    color: #5A5A5A ;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 0px;
}

.focus-box .service-icon:hover {
    border: 10px solid #FD0 !important;
}

.focus-box .service-icon .pixeden {
    border-radius: 0;
}

.focus-box .red-border-bottom:before {
    background: #FD0 !important;
}

.focus-box p {
	color: #6E6E6E !important;
    font-family: "Oxygen", sans-serif !important;
}

article.hentry {
    border: 1px solid #DEDEDE;
    padding: 15px;
    background-color: #FFF !important;
}

.large-container {
    background-color: #FFF !important;
    border-radius: 4px;
    margin: 35px 0px;
    position: relative;
    width: 97%;
    margin-top: 0;
}

#primary{
    margin-top: -60px;
}

.listpost-content-wrap .entry-content p {
    min-height: 90px;
    margin-bottom: 0px;
    font-family: "Oxygen", sans-serif !important;
    margin-right: 10px;
}

.content-left-wrap {
    padding-top: 60px;
}

.carousel-control.left {
    margin-left: -35px;
}

.listpost-content-wrap-large {
    position: absolute;
    bottom: 0px;
    background: rgba(255, 255, 255, 0.98) none repeat scroll 0% 0%;
    min-height: 50px;
    width: 100%;
    padding: 20px 20px 0px;
    border-top: 2px solid #FFF;
    border: 1px solid #DEDEDE;
}

#client-feedbacks .feedback-box {
    background: #404040;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
    color: #fff !important;
}
.feedback-box .message {
    color: #fff;
}
.feedback-box .client-info .client-name {
    color: #fff;
}

/*--------------------------------------------------------------
Footer
--------------------------------------------------------------*/
#footer {
    background: rgba(39, 39, 39, 0.95) none repeat scroll 0% 0%;
}

.entry-footer a {
    color: #B36A6A !important;
    font-style: italic;
}

/* Latest news */

.rb-latest-news-container {
    width: 100%;
}

.rb-latest-news {
    width: 24.99%;
    margin: 0;
    display: inline-block;
}

.rb-latest-news-image {
    position: relative;
    display: block;
    overflow: hidden;
    width: 100%;
    -moz-transform: translateZ(0px);
    -webkit-transform: translateZ(0px);
}

.rb-latest-news-image img {
    position: relative;
    display: block;
    width: 100%;
    z-index: 100;
    -webkit-animation: rb-animatedBackground 1s ease-out 1;
    -moz-animation: rb-animatedBackground 1s ease-out 1;
    animation: rb-animatedBackground 1s ease-out 1;
    -webkit-animation-fill-mode: forwards;
    animation-fill-mode: forwards;
}

.rb-latest-news-image:hover img {
    -webkit-animation: rb-animatedBackground-rev 1s ease-out 1;
    -moz-animation: rb-animatedBackground-rev 1s ease-out 1;
    animation: rb-animatedBackground-rev 1s ease-out 1;
    -webkit-animation-fill-mode: forwards;
    animation-fill-mode: forwards;
}

.rb-latest-news-image:hover {
    background: #FFDD00;
}

@-webkit-keyframes rb-animatedBackground {
    0% {
        -webkit-transform: scale(1, 1);
        -moz-transform: scale(1, 1);
        -ms-transform: scale(1, 1);
        -o-transform: scale(1, 1);
        transform: scale(1, 1)
    }
    100% {
        -webkit-transform: scale(1.3, 1.3);
        -moz-transform: scale(1.3, 1.3);
        -ms-transform: scale(1.3, 1.3);
        -o-transform: scale(1.3, 1.3);
        transform: scale(1.3, 1.3)
    }
}

@-moz-keyframes rb-animatedBackground {
    0% {
        -webkit-transform: scale(1, 1);
        -moz-transform: scale(1, 1);
        -ms-transform: scale(1, 1);
        -o-transform: scale(1, 1);
        transform: scale(1, 1)
    }
    100% {
        -webkit-transform: scale(1.3, 1.3);
        -moz-transform: scale(1.3, 1.3);
        -ms-transform: scale(1.3, 1.3);
        -o-transform: scale(1.3, 1.3);
        transform: scale(1.3, 1.3)
    }
}

@keyframes rb-animatedBackground {
    0% {
        -webkit-transform: scale(1, 1);
        -moz-transform: scale(1, 1);
        -ms-transform: scale(1, 1);
        -o-transform: scale(1, 1);
        transform: scale(1, 1)
    }
    100% {
        -webkit-transform: scale(1.3, 1.3);
        -moz-transform: scale(1.3, 1.3);
        -ms-transform: scale(1.3, 1.3);
        -o-transform: scale(1.3, 1.3);
        transform: scale(1.3, 1.3)
    }

}

@-webkit-keyframes rb-animatedBackground-rev {
    100% {
        -webkit-transform: scale(1, 1);
        -moz-transform: scale(1, 1);
        -ms-transform: scale(1, 1);
        -o-transform: scale(1, 1);
        transform: scale(1, 1)
    }
    0% {
        -webkit-transform: scale(1.3, 1.3);
        -moz-transform: scale(1.3, 1.3);
        -ms-transform: scale(1.3, 1.3);
        -o-transform: scale(1.3, 1.3);
        transform: scale(1.3, 1.3)
    }
}
/* ... */

